[project]
name = "search-engine-with-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "duckduckgo-search>=8.0.1",
    "faiss-cpu>=1.11.0",
    "hf-xet>=1.1.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.16",
    "streamlit>=1.45.0",
    "tavily-python>=0.7.2",
    "wikipedia>=1.4.0",
]
